--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,104 @@
-/* Reset margin and padding to remove any spacing */
-body, html {
+/* Reset margin and padding */
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body, html {
+  width: 100%;
   height: 100%;
+  font-family: 'Albert Sans', sans-serif; /* Apply Albert Sans as the default font */
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #ffffff; /* Light blue background */
+  position: relative;
 }
 
-/* Container to hold the image */
-.image-container {
-  position: relative; /* Makes it possible to position the image inside it */
-  width: 100%;
-  height: 100vh; /* Full viewport height */
-  overflow: hidden; /* Ensures any overflow is hidden */
+/* Main container */
+.container {
+  text-align: center;
+  width: 80%;
+  max-width: 900px;
+  margin: auto;
 }
 
-.fullscreen-image {
+/* Logo */
+.logo img {
+  width: 80px;
+  margin-bottom: 20px;
+  margin-top: 50px;
+}
+
+/* Text section */
+.text h3 {
+  font-size: 30px;
+  color: #000;
+  font-weight: 300;
+  margin-bottom: -10px;
+}
+
+.comingsoon {
+  font-size: 60px;
+  font-weight: 400; /* Bold weight */
+  line-height: 1.5;
+  color: #000;
+  margin-bottom: -35px;
+}
+
+.serving{
+  font-size: 60px;
+  font-weight: 400; /* Bold weight */
+  line-height: 1.5;
+  color: #000;
+  margin-bottom: 0px;
+}
+
+/* Illustration */
+.illustration img {
   width: 100%;
-  height: 100%;
-  object-fit: cover; /* Ensures the image fills the container */
-  object-position: center; /* Centers the image */
-  display: block;
+  max-width: 400px;
+  margin-top: 20px;
+}
+
+.vector img {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.vector1 img {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+}
+
+@media screen and (max-width: 870px), screen and (max-height: 900px) {
+  .vector img,
+  .vector1 img {
+    display: none;
+  }
+}
+
+/* Footer */
+footer {
+  margin-top: 30px;
+  font-size: 0.8rem;
+  color: #888;
+  font-weight: 300; /* Light weight */
+}
+
+.watermark {
+  position: absolute;
+  left: 10%;
+  bottom: 5%;
+}
+
+/* Correct media query for smaller screens */
+@media screen and (max-width: 900px) and (max-height: 900px) {
+  .watermark {
+    left: 35%;
+    bottom: 0%;
+  }
 }
