--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ body, html {
   right: 0px;
 }
 
-@media screen and (max-width: 870px), screen and (max-height: 900px) {
+@media screen and (max-width: 870px) and (max-height: 900px) {
   .vector img,
   .vector1 img {
     display: none;
